# criminal_docs_helper

./: .gitignore  pyproject.toml
config/: asgi.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py
core/services/: document_constructor.py  views.py
media/templates/: explanation.docx  inspection_protocol.docx  orm_instruction.docx  report.docx  voluntary_surrender.docx
