[project]
name = "criminal-docs-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-debug-toolbar (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]
